--- a/client/src/styles/TransactionList.scss
+++ b/client/src/styles/TransactionList.scss
@@ -5,6 +5,12 @@
     flex-direction: column;
     justify-content: center;
 
+    .totals {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
     h2 {
         margin-bottom: 20px;
         text-align: center;
