--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -134,6 +134,7 @@ body {
 
     .transactions {
         margin-top: 5vh;
+
         .toggle-buttons {
             display: flex;
             justify-content: center;
@@ -163,12 +164,18 @@ body {
 
         .content {
             margin-top: 20px;
+            .download {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
         }
     }
 
 
     .categories {
         margin-top: 5vh;
+
         .toggle-buttons {
             display: flex;
             justify-content: center;
@@ -200,7 +207,110 @@ body {
             margin-top: 20px;
         }
     }
+
+    .plot {
+        margin-top: 10vh;
+
+        h2 {
+            color: #333;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        .line-plot {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            margin: 0 auto
+        }
+
+        .toggle-buttons {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+
+            button {
+                padding: 10px 20px;
+                margin: 0 10px;
+                border: none;
+                background-color: #f0f0f0;
+                color: #333;
+                cursor: pointer;
+                font-weight: bold;
+                border-radius: 5px;
+                transition: background-color 0.3s;
+
+                &:hover {
+                    background-color: #e0e0e0;
+                }
+
+                &.active {
+                    background-color: #4CAF50;
+                    color: #fff;
+                }
+            }
+        }
+
+        .chart-container {
+            display: flex;
+            align-items: center;
+            margin-top: 20px;
+            padding: 15px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 80%;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .category-chart {
+            display: flex;
+            align-items: center;
+            margin-top: 30px;
+
+            h4 {
+                margin-bottom: 15px;
+                color: #007bff;
+            }
+
+            canvas {
+                width: 60% !important;
+                max-width: 300px;
+                height: auto !important;
+                display: flex;
+                margin: 0 auto;
+                align-items: center;
+            }
+        }
+
+        .pie {
+            display: flex;
+            align-items: center;
+
+            .pie-chart {
+                margin: 30px auto;
+                width: 50%;
+                text-align: center;
+
+                h4 {
+                    margin-bottom: 15px;
+                }
+
+                canvas {
+                    width: 300px !important;
+                    height: 300px !important;
+                    margin: 0 auto;
+                    display: block;
+                }
+            }
+        }
+
+    }
 }
+
 
 .watermark {
     position: fixed;
@@ -211,7 +321,79 @@ body {
     margin-right: 2%;
     margin-bottom: 2%;
 }
+
 .watermark img {
     width: 100%;
     height: auto;
+}
+
+
+
+// // Mobile
+// @media (max-width: 480px) {
+//     body {
+//         font-size: smaller;
+//     }
+
+//     .line-plot {
+//         width: 95vw;
+//     }
+// }
+
+
+// Mobile (max-width: 480px)
+@media (max-width: 480px) {
+    .auth-container {
+        img {
+            width: 50%;
+        }
+    }
+    .form {
+        padding: 20px;
+        width: 90%;
+        input, button {
+            font-size: 0.8rem;
+        }
+    }
+    .dashboard .plot .line-plot {
+        width: 90vw;
+    }
+}
+
+// Tablet (min-width: 481px) and (max-width: 768px)
+@media (min-width: 481px) and (max-width: 768px) {
+    .form {
+        width: 80%;
+        padding: 25px;
+    }
+    .dashboard .plot .chart-container {
+        width: 90%;
+    }
+    .category-chart canvas {
+        width: 50% !important;
+    }
+}
+
+// Small Laptop (769px to 1024px)
+@media (min-width: 769px) and (max-width: 1024px) {
+    .form {
+        width: 70%;
+    }
+    .dashboard .plot .chart-container {
+        width: 80%;
+    }
+}
+
+// Large Laptop (1025px to 1366px)
+@media (min-width: 1025px) and (max-width: 1366px) {
+    .dashboard .plot .chart-container {
+        width: 70%;
+    }
+}
+
+// Desktop (1367px+)
+@media (min-width: 1367px) {
+    .dashboard .plot .chart-container {
+        width: 60%;
+    }
 }
